 - Fixed reading PMSN
 - Dropped support for compile-time PATCHED_DRIVE flag.
 - Bus encryption support

2013-03-04: Version 0.6.0
 - Added reading of PMSN (Pre-recorded Media Serial Number)
 - Fix resource leak
 - Use proper paths to search for keydb and friends on Darwin.
 - Build fixes and improvements

2012-08-17: Version 0.5.0
 - Support for Mac OS X using IOKit
 - Fix AACS detection failure in some Win32 systems

2012-05-07: Version 0.4.0
 - Added aacs_open2() and error codes
 - Renamed libaacs_test to aacs_info
 - Added aacs_get_mkb_version()
 - Fixed memory leaks
 - Fixed buffer overflow
 - Added revocation list caching
 - Check host certificates against latest seen revocation list

2012-03-21: Version 0.3.1
 - Added configure option for libgcrypt prefix
 - Fixed building Win32 DLL
 - Fixed segfault when mount point path can't be resolved
 - Do not export internal symbols from generated parser/lexer
 - Do not distribute generated parser files
 - Check for libgpg-error. Link against it when needed.
 - Distribute README.txt
 - Added ChangeLog

2011-11-30: Version 0.3.0
 - First release