@@ -131,4 +131,7 @@ AACS_PRIVATE int cache_remove(const char *name);
 
 AACS_PRIVATE void *cache_get_or_update(const char *type, const void *data, uint32_t *len, uint32_t version);
 
+AACS_PRIVATE int config_get(const char *name, uint32_t *len, void *buf); /* use buf=NULL to get size */
+AACS_PRIVATE int config_save(const char *name, const void *data, uint32_t len);
+
 #endif
