@@ -52,6 +52,10 @@ AACS_PUBLIC const uint8_t *aacs_get_disc_id(AACS *aacs);
 AACS_PUBLIC const uint8_t *aacs_get_vid(AACS *aacs);  /* may fail even if disc can be decrypted */
 AACS_PUBLIC const uint8_t *aacs_get_pmsn(AACS *aacs); /* may fail even if disc can be decrypted */
 
+/* AACS Online */
+AACS_PUBLIC const uint8_t *aacs_get_device_binding_id(AACS *aacs);
+AACS_PUBLIC const uint8_t *aacs_get_device_nonce(AACS *aacs);
+
 /* revocation lists */
 typedef struct {
     uint16_t  range;
